manifests/demoapp/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/client-max-body-size: 50m
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  rewrite ^/kibana/(.*)$ /$1 break;
    #  rewrite ^/grafana/(.*)$ /$1 break;
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
    - host: ci.k8s.local
      http:
        paths:
          - backend:
              serviceName: project-demo
              servicePort: 80
            path: /
